Добавляет главную навигацию

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="main-page-header">
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li class="main-nav-list-item">Главная</li>
+          <li class="main-nav-list-item">О Седоне</li>
+          <li class="main-nav-list-item">Гостиницы</li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
