Добавляет ссылки в main-nav

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <header class="main-page-header">
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li class="main-nav-list-item">Главная</li>
-          <li class="main-nav-list-item">О Седоне</li>
-          <li class="main-nav-list-item">Гостиницы</li>
+          <li class="main-nav-list-item"><a href="#">Главная</a></li>
+          <li class="main-nav-list-item"><a href="#">О Седоне</a></li>
+          <li class="main-nav-list-item"><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
