Добавляет навигацию пользователя

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <header class="main-page-header">
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li class="main-nav-list-item"><a href="#">Главная</a></li>
-          <li class="main-nav-list-item"><a href="#">О Седоне</a></li>
-          <li class="main-nav-list-item"><a href="catalog.html">Гостиницы</a></li>
+          <li class="main-nav-list-item"><a href="#" class="main-nav-link">Главная</a></li>
+          <li class="main-nav-list-item"><a href="#" class="main-nav-link">О Седоне</a></li>
+          <li class="main-nav-list-item"><a href="catalog.html" class="main-nav-link">Гостиницы</a></li>
+        </ul>
+      </nav>
+      <nav class="user-nav">
+        <ul class="user-nav-list">
+          <li class="user-nav-list-item"><a href="#">Поиск</a></li>
+          <li class="user-nav-list-item"><a href="#">Избранное</a></li>
+          <li class="user-nav-list-item"><a href="#">Хочу сюда!</a></li>
         </ul>
       </nav>
     </header>
