--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
   </head>
   <body>
     <header class="main-page-header">
-      <nav class="main-nav">
-        <ul class="main-nav-list">
-          <li class="main-nav-list-item"><a href="#" class="main-nav-link">Главная</a></li>
-          <li class="main-nav-list-item"><a href="#" class="main-nav-link">О Седоне</a></li>
-          <li class="main-nav-list-item"><a href="catalog.html" class="main-nav-link">Гостиницы</a></li>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" >Гостиницы</a>
+          </li>
         </ul>
-      </nav>
-      <nav class="user-nav">
-        <ul class="user-nav-list">
-          <li class="user-nav-list-item"><a href="#">Поиск</a></li>
-          <li class="user-nav-list-item"><a href="#">Избранное</a></li>
-          <li class="user-nav-list-item"><a href="#">Хочу сюда!</a></li>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="navigation-link" href="#">Хочу сюда!</a>
+          </li>
         </ul>
       </nav>
     </header>
