Добавляет логотип в шапку и добавляет main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header class="main-page-header">
+      <img class="main-logo" src="#" alt="Логотип Седона">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-list-item">
@@ -35,5 +36,14 @@
         </ul>
       </nav>
     </header>
+
+    <main class="main-index">
+      <h1 class="visually-hidden">Курорт "Седона"</h1>
+
+    </main>
+
+    <footer>
+
+    </footer>
   </body>
 </html>
