Добавляет section welcome в main

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 
     <main class="main-index">
       <h1 class="visually-hidden">Курорт "Седона"</h1>
-
+      <section class="welcome">
+        <h2 class="visually-hidden">Добро пожаловать</h2>
+        <img src="#" alt="Добро пожаловать в Седону">
+        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
     </main>
 
     <footer>
