--- a/index.html
+++ b/index.html
@@ -48,30 +48,50 @@
         <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
-          <li>
+          <li class="advantages-list-item">
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="#" alt="Вид города">
+            <img src="#" alt="Город Седона">
           </li>
-          <li>
+          <li class="advantages-list-item">
             <h3>Небольшая площадь</h3>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
-          <li>
+          <li class="advantages-list-item">
             <h3>Красивая дорога</h3>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li>
+          <li class="advantages-list-item">
             <h3>Мало туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li>
+          <li class="advantages-list-item">
             <h3>Там есть мост Дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img src="#" alt="Гранд-Каньон">
           </li>
         </ul>
         <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
         <p>Опытный персонал и качественное обслуживание!</p>
+      </section>
+      <section class="recomendations">
+        <ul class="recomendations-list">
+          <li class="recomendations-list-item">
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
+            <img src="#" alt="">
+          </li>
+          <li class="recomendations-list-item">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <img src="#" alt="">
+          </li>
+          <li class="recomendations-list-item">
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и настоящего местного производства!</p>
+            <img src="#" alt="">
+          </li>
+        </ul>
       </section>
     </main>
 
