--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
           </li>
         </ul>
       </section>
+      <section class="search-hotel">
+        <h3>Заинтересовались?</h3>
+        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="btn">Поиск гостиницы в Седоне</button>
+      </section>
     </main>
 
     <footer>
