--- a/index.html
+++ b/index.html
@@ -101,7 +101,19 @@
     </main>
 
     <footer>
-
+      <h3>Подпишитесь на рассылку</h3>
+      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
+        <input type="email" name="email" id="" placeholder="Ваш e-mail" required>
+        <button class="btn" type="submit">Подписаться</button>
+      </form>
+      <ul class="social-list">
+        <li class="social-list-item"><a>VK</a></li>
+        <li class="social-list-item"><a>Telegram</a></li>
+        <li class="social-list-item"><a>Youtube</a></li>
+      </ul>
+      <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="htmlacademy-link" href="https://htmlacademy.ru/"><img src="#" alt="">.htmlacademy</a>
     </footer>
   </body>
 </html>
