Убирает img из ссылки

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <li class="social-list-item"><a>Youtube</a></li>
       </ul>
       <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="htmlacademy-link" href="https://htmlacademy.ru/"><img src="#" alt="">.htmlacademy</a>
+      <a class="htmlacademy-link" href="https://htmlacademy.ru/">.htmlacademy</a>
     </footer>
   </body>
 </html>
