--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <p>Опытный персонал и качественное обслуживание!</p>
       </section>
       <section class="recomendations">
+        <h2 class="visually-hidden">Рекомендации</h2>
         <ul class="recomendations-list">
           <li class="recomendations-list-item">
             <h3>Жильё</h3>
