--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         </ul>
       </section>
       <section class="search-hotel">
+        <h2>Поиск отеля</h2>
         <h3>Заинтересовались?</h3>
         <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="btn">Поиск гостиницы в Седоне</button>
