--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="main-page-header">
+    <header class="header-index">
       <img class="main-logo" src="#" alt="Логотип Седона">
       <nav class="navigation">
         <ul class="navigation-list">
@@ -102,7 +102,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer-index">
       <h3>Подпишитесь на рассылку</h3>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
