--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy Sedona-catalog</title>
+    <title>HTML Academy: Седона каталог</title>
   </head>
   <body>
 
