--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="header-index">
+    <header class="main-header">
       <img class="main-logo" src="#" alt="Логотип Седона">
       <nav class="navigation">
         <ul class="navigation-list">
