--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <h3>Подпишитесь на рассылку</h3>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
-        <input type="email" name="email" id="" placeholder="Ваш e-mail" required>
+        <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
         <button class="btn" type="submit">Подписаться</button>
       </form>
       <ul class="social-list">
