--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,23 @@
     </main>
 
     <footer class="footer-catalog">
-
+      <h2 class="visually-hidden">Контакты</h2>
+      <h3>Подпишитесь на рассылку</h3>
+      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
+        <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
+        <button class="btn" type="submit">Подписаться</button>
+      </form>
+      <h3 class="visually-hidden">Социальные сети</h3>
+      <ul class="social-list">
+        <li class="social-list-item"><a>VK</a></li>
+        <li class="social-list-item"><a>Telegram</a></li>
+        <li class="social-list-item"><a>Youtube</a></li>
+      </ul>
+      <h3 class="visually-hidden">Контактный телефон</h3>
+      <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <h3 class="visually-hidden">HTML Академия</h3>
+      <a class="htmlacademy-link" href="https://htmlacademy.ru/">.htmlacademy</a>
     </footer>
   </body>
 </html>
