--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-link" >Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
