--- a/catalog.html
+++ b/catalog.html
@@ -10,13 +10,13 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-list-item">
-            <a class="navigation-link" href="#">Главная</a>
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-link" >Гостиницы</a>
+            <a class="navigation-link" href="#">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
