Делает логотип ссылкой

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="main-logo" src="#" alt="Логотип Седона">
+      <a href="index.html">
+        <img class="main-logo" src="#" alt="Логотип Седона">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-list-item">
