Добавляет header в main

--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,10 @@
     </header>
 
     <main class="main-catalog">
+      <header class="main-inner-header">
+        <h1 class="main-inner-header-title">Гостиницы Седоны</h1>
 
+      </header>
     </main>
 
     <footer class="footer-catalog">
