--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,14 @@
     <main class="main-catalog">
       <header class="main-inner-header">
         <h1 class="main-inner-header-title">Гостиницы Седоны</h1>
-
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="index.html">Главная</a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link">Гостиницы</a>
+          </li>
+        </ul>
       </header>
     </main>
 
