--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-link" href="#">Хочу сюда!</a>
+            <a class="navigation-link btn" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
