--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
             </a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-link" href="#">Хочу сюда!</a>
+            <a class="navigation-link btn" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -51,26 +51,103 @@
           </li>
         </ul>
       </header>
+      <section class="serach-hotel">
+        <h2 class="visually-hidden">Параметры поиска отеля</h2>
+        <form action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset class="hotel-filter-group">
+            <legend class="hotel-filter-group-title">Инфраструктура</legend>
+            <ul class="hotel-filter-list">
+              <li class="hotel-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="pool" checked>
+                  Бассейн
+                </label>
+              </li>
+              <li class="hotel-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="parking" checked>
+                  Парковка
+                </label>
+              </li>
+              <li class="hotel-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="wi-fi">
+                  Wi-Fi
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="hotel-filter-group">
+            <legend class="hotel-filter-group-title">Тип жилья</legend>
+            <ul class="hotel-filter-list">
+              <li class="hotel-filter-item">
+                <label class="control">
+                  <input type="radio" name="housing-type" value="hotel" checked>
+                  Гостиница
+                </label>
+              </li>
+              <li class="hotel-filter-item">
+                <label class="control">
+                  <input type="radio" name="housing-type" value="motel">
+                  Мотель
+                </label>
+              </li>
+              <li class="hotel-filter-item">
+                <label class="control">
+                  <input type="radio" name="housing-type" value="apartments">
+                  Апартаменты
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <button class="btn" type="submit">Применить</button>
+          <button class="btn" type="reset">Сбросить</button>
+        </form>
+        <p>Найдено гостиниц: 38</p>
+        <select class="select-control" aria-label="Сортировка">
+          <option value="cheap">Сначала дешевые</option>
+          <option value="expensive">Сначала дорогие</option>
+          <option value="popular">Сначала популярные</option>
+        </select>
+        <a class="sorting-btn" href="#">
+          <span class="visually-hidden">Показать карточки</span>
+        </a>
+        <a class="sorting-btn" href="#">
+          <span class="visually-hidden">Показать слайды</span>
+        </a>
+        <a class="sorting-btn" href="#">
+          <span class="visually-hidden">Показать список</span>
+        </a>
+      </section>
     </main>
 
-    <footer class="footer-catalog">
+    <footer class="footer-index">
       <h2 class="visually-hidden">Контакты</h2>
-      <h3>Подпишитесь на рассылку</h3>
-      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
-        <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
-        <button class="btn" type="submit">Подписаться</button>
-      </form>
-      <h3 class="visually-hidden">Социальные сети</h3>
-      <ul class="social-list">
-        <li class="social-list-item"><a>VK</a></li>
-        <li class="social-list-item"><a>Telegram</a></li>
-        <li class="social-list-item"><a>Youtube</a></li>
-      </ul>
-      <h3 class="visually-hidden">Контактный телефон</h3>
-      <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <h3 class="visually-hidden">HTML Академия</h3>
-      <a class="htmlacademy-link" href="https://htmlacademy.ru/">.htmlacademy</a>
+      <section class="mailing">
+        <h3>Подпишитесь на рассылку</h3>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
+          <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
+          <button class="btn" type="submit">Подписаться</button>
+        </form>
+      </section>
+      <section class="social">
+        <h3 class="visually-hidden">Социальные сети</h3>
+        <ul class="social-list">
+          <li class="social-list-item"><a>VK</a></li>
+          <li class="social-list-item"><a>Telegram</a></li>
+          <li class="social-list-item"><a>Youtube</a></li>
+        </ul>
+      </section>
+      <section class="phone">
+        <h3 class="visually-hidden">Контактный телефон</h3>
+        <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </section>
+      <section class="html-academy">
+        <h3 class="visually-hidden">HTML Академия</h3>
+        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.htmlacademy</a>
+      </section>
     </footer>
   </body>
 </html>
