--- a/catalog.html
+++ b/catalog.html
@@ -51,7 +51,7 @@
           </li>
         </ul>
       </header>
-      <section class="serach-hotel">
+      <section class="search-hotel">
         <h2 class="visually-hidden">Параметры поиска отеля</h2>
         <form action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="hotel-filter-group">
@@ -104,7 +104,10 @@
           <button class="btn" type="submit">Применить</button>
           <button class="btn" type="reset">Сбросить</button>
         </form>
-        <p>Найдено гостиниц: 38</p>
+      </section>
+      <section>
+        <h2 class="visually-hidden">Результаты поиска</h2>
+        <span class="searching-results-quantity">Найдено гостиниц: 38</span>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешевые</option>
           <option value="expensive">Сначала дорогие</option>
@@ -119,8 +122,20 @@
         <a class="sorting-btn" href="#">
           <span class="visually-hidden">Показать список</span>
         </a>
+        <ul class="hotel-list">
+          <li class="hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="#" alt="">
+              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+            </a>
+            <span class="hotel-price">Гостиница От 4000 &#8381;</span>
+            <a class="hotel-information btn" href="#">Подробнее</a>
+            <button class="btn favorites">В избранное</button>
+            <span class="rating">Рейтинг: 8,5</span>
+          </li>
+        </ul>
       </section>
-    </main>
+      </main>
 
     <footer class="footer-index">
       <h2 class="visually-hidden">Контакты</h2>
