--- a/catalog.html
+++ b/catalog.html
@@ -130,8 +130,41 @@
             </a>
             <span class="hotel-price">Гостиница От 4000 &#8381;</span>
             <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn favorites">В избранное</button>
+            <button class="btn add-to-favorites">В избранное</button>
             <span class="rating">Рейтинг: 8,5</span>
+          </li>
+
+          <li class="hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="#" alt="">
+              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+            </a>
+            <span class="hotel-price">Гостиница От 5000 &#8381;</span>
+            <a class="hotel-information btn" href="#">Подробнее</a>
+            <button class="btn favorites">В избранном</button>
+            <span class="rating">Рейтинг: 9,2</span>
+          </li>
+
+          <li class="hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="#" alt="">
+              <h3 class="hotel-card-title">Desert Quail Inn</h3>
+            </a>
+            <span class="hotel-price">Гостиница От 2500 &#8381;</span>
+            <a class="hotel-information btn" href="#">Подробнее</a>
+            <button class="btn add-to-favorites">В избранное</button>
+            <span class="rating">Рейтинг: 6,9</span>
+          </li>
+
+          <li class="hotel-card">
+            <a class="hotel-card-link" href="#">
+              <img class="hotel-card-image" src="#" alt="">
+              <h3 class="hotel-card-title">GreenTree Inn</h3>
+            </a>
+            <span class="hotel-price">Гостиница От 1500 &#8381;</span>
+            <a class="hotel-information btn" href="#">Подробнее</a>
+            <button class="btn add-to-favorites">В избранное</button>
+            <span class="rating">Рейтинг: 5,0</span>
           </li>
         </ul>
       </section>
