Изменяет и добавляет класс

--- a/catalog.html
+++ b/catalog.html
@@ -191,7 +191,7 @@
       </section>
       </main>
 
-    <footer class="footer-index">
+    <footer class="main-footer">
       <h2 class="visually-hidden">Контакты</h2>
       <section class="mailing">
         <h3>Подпишитесь на рассылку</h3>
