--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
       </section>
     </main>
 
-    <footer class="footer-index">
+    <footer class="main-footer">
       <h2 class="visually-hidden">Контакты</h2>
-      <section class="mailing">
+      <section class="mailing mailing-index">
         <h3>Подпишитесь на рассылку</h3>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
