Добавляет type кнопке

--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
             </a>
             <span class="hotel-price">Гостиница От 4000 &#8381;</span>
             <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn add-to-favorites">В избранное</button>
+            <button class="btn add-to-favorites" type="button">В избранное</button>
             <span class="rating">Рейтинг: 8,5</span>
           </li>
 
@@ -141,7 +141,7 @@
             </a>
             <span class="hotel-price">Гостиница От 5000 &#8381;</span>
             <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn favorites">В избранном</button>
+            <button class="btn favorites" type="button">В избранном</button>
             <span class="rating">Рейтинг: 9,2</span>
           </li>
 
@@ -152,7 +152,7 @@
             </a>
             <span class="hotel-price">Гостиница От 2500 &#8381;</span>
             <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn add-to-favorites">В избранное</button>
+            <button class="btn add-to-favorites" type="button">В избранное</button>
             <span class="rating">Рейтинг: 6,9</span>
           </li>
 
@@ -163,7 +163,7 @@
             </a>
             <span class="hotel-price">Гостиница От 1500 &#8381;</span>
             <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn add-to-favorites">В избранное</button>
+            <button class="btn add-to-favorites" type="button">В избранное</button>
             <span class="rating">Рейтинг: 5,0</span>
           </li>
         </ul>
