Добавляет класс ссылке и добавляет  span в ссылку

--- a/catalog.html
+++ b/catalog.html
@@ -204,9 +204,15 @@
       <section class="social">
         <h3 class="visually-hidden">Социальные сети</h3>
         <ul class="social-list">
-          <li class="social-list-item"><a>VK</a></li>
-          <li class="social-list-item"><a>Telegram</a></li>
-          <li class="social-list-item"><a>Youtube</a></li>
+          <li class="social-list-item">
+            <a class="social-btn" href="#"><span class="visually-hidden">VK</span></a>
+          </li>
+          <li class="social-list-item">
+            <a class="social-btn" href="#"><span class="visually-hidden">Telegram</span></a>
+          </li>
+          <li class="social-list-item">
+            <a class="social-btn" href="#"><span class="visually-hidden">Youtube</span></a>
+          </li>
         </ul>
       </section>
       <section class="phone">
