Изменяет название класса

--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
             </a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-link btn" href="#">Хочу сюда!</a>
+            <a class="navigation-link button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -101,8 +101,8 @@
               </li>
             </ul>
           </fieldset>
-          <button class="btn" type="submit">Применить</button>
-          <button class="btn" type="reset">Сбросить</button>
+          <button class="button" type="submit">Применить</button>
+          <button class="button" type="reset">Сбросить</button>
         </form>
       </section>
       <section>
@@ -113,13 +113,13 @@
           <option value="expensive">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
-        <a class="sorting-btn" href="#">
+        <a class="sorting-button" href="#">
           <span class="visually-hidden">Показать карточки</span>
         </a>
-        <a class="sorting-btn" href="#">
+        <a class="sorting-button" href="#">
           <span class="visually-hidden">Показать слайды</span>
         </a>
-        <a class="sorting-btn" href="#">
+        <a class="sorting-button" href="#">
           <span class="visually-hidden">Показать список</span>
         </a>
         <ul class="hotel-list">
@@ -129,8 +129,8 @@
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
             <span class="hotel-price">Гостиница От 4000 &#8381;</span>
-            <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn add-to-favorites" type="button">В избранное</button>
+            <a class="hotel-information button" href="#">Подробнее</a>
+            <button class="button add-to-favorites" type="button">В избранное</button>
             <span class="rating">Рейтинг: 8,5</span>
           </li>
 
@@ -140,8 +140,8 @@
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
             <span class="hotel-price">Гостиница От 5000 &#8381;</span>
-            <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn favorites" type="button">В избранном</button>
+            <a class="hotel-information button" href="#">Подробнее</a>
+            <button class="button favorites" type="button">В избранном</button>
             <span class="rating">Рейтинг: 9,2</span>
           </li>
 
@@ -151,8 +151,8 @@
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
             <span class="hotel-price">Гостиница От 2500 &#8381;</span>
-            <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn add-to-favorites" type="button">В избранное</button>
+            <a class="hotel-information button" href="#">Подробнее</a>
+            <button class="button add-to-favorites" type="button">В избранное</button>
             <span class="rating">Рейтинг: 6,9</span>
           </li>
 
@@ -162,8 +162,8 @@
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
             <span class="hotel-price">Гостиница От 1500 &#8381;</span>
-            <a class="hotel-information btn" href="#">Подробнее</a>
-            <button class="btn add-to-favorites" type="button">В избранное</button>
+            <a class="hotel-information button" href="#">Подробнее</a>
+            <button class="button add-to-favorites" type="button">В избранное</button>
             <span class="rating">Рейтинг: 5,0</span>
           </li>
         </ul>
@@ -198,20 +198,20 @@
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
-          <button class="btn" type="submit">Подписаться</button>
+          <button class="button" type="submit">Подписаться</button>
         </form>
       </section>
       <section class="social">
         <h3 class="visually-hidden">Социальные сети</h3>
         <ul class="social-list">
           <li class="social-list-item">
-            <a class="social-btn" href="#"><span class="visually-hidden">VK</span></a>
+            <a class="social-button" href="#"><span class="visually-hidden">VK</span></a>
           </li>
           <li class="social-list-item">
-            <a class="social-btn" href="#"><span class="visually-hidden">Telegram</span></a>
+            <a class="social-button" href="#"><span class="visually-hidden">Telegram</span></a>
           </li>
           <li class="social-list-item">
-            <a class="social-btn" href="#"><span class="visually-hidden">Youtube</span></a>
+            <a class="social-button" href="#"><span class="visually-hidden">Youtube</span></a>
           </li>
         </ul>
       </section>
