--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-link btn" href="#">Хочу сюда!</a>
+            <a class="navigation-link button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -98,7 +98,7 @@
         <h2>Поиск отеля</h2>
         <h3>Заинтересовались?</h3>
         <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="btn">Поиск гостиницы в Седоне</button>
+        <button class="button">Поиск гостиницы в Седоне</button>
       </section>
     </main>
 
@@ -109,20 +109,20 @@
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
-          <button class="btn" type="submit">Подписаться</button>
+          <button class="button" type="submit">Подписаться</button>
         </form>
       </section>
       <section class="social">
         <h3 class="visually-hidden">Социальные сети</h3>
         <ul class="social-list">
           <li class="social-list-item">
-            <a class="social-btn" href="#"><span class="visually-hidden">VK</span></a>
+            <a class="social-button" href="#"><span class="visually-hidden">VK</span></a>
           </li>
           <li class="social-list-item">
-            <a class="social-btn" href="#"><span class="visually-hidden">Telegram</span></a>
+            <a class="social-button" href="#"><span class="visually-hidden">Telegram</span></a>
           </li>
           <li class="social-list-item">
-            <a class="social-btn" href="#"><span class="visually-hidden">Youtube</span></a>
+            <a class="social-button" href="#"><span class="visually-hidden">Youtube</span></a>
           </li>
         </ul>
       </section>
