--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-list-item">
-            <a class="navigation-link navigation-link-current">Главная</a>
+            <a class="navigation-link navigation-link-current" href="/">Главная</a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">О Седоне</a>
