--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,7 @@
             <a class="breadcrumbs-link" href="index.html">Главная</a>
           </li>
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">Гостиницы</a>
+            Гостиницы
           </li>
         </ul>
       </header>
