--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
       </header>
       <section class="search-hotel">
         <h2 class="visually-hidden">Параметры поиска отеля</h2>
-        <form action="https://echo.htmlacademy.ru/" method="get">
+        <form action="https://echo.htmlacademy.ru/" method="post">
           <fieldset class="hotel-filter-group">
             <legend class="hotel-filter-group-title">Инфраструктура</legend>
             <ul class="hotel-filter-list">
