--- a/catalog.html
+++ b/catalog.html
@@ -115,15 +115,23 @@
           <option value="expensive">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
-        <a class="sorting-button" href="#">
-          <span class="visually-hidden">Показать карточки</span>
-        </a>
-        <a class="sorting-button" href="#">
-          <span class="visually-hidden">Показать слайды</span>
-        </a>
-        <a class="sorting-button" href="#">
-          <span class="visually-hidden">Показать список</span>
-        </a>
+        <ul class="view-type-list">
+          <li class="view-type-item">
+            <a class="sorting-button" href="#">
+              <span class="visually-hidden">Показать карточки</span>
+            </a>
+          </li>
+          <li class="view-type-item">
+            <a class="sorting-button" href="#">
+              <span class="visually-hidden">Показать слайды</span>
+            </a>
+          </li>
+          <li class="view-type-item">
+            <a class="sorting-button" href="#">
+              <span class="visually-hidden">Показать список</span>
+            </a>
+          </li>
+        </ul>
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
