--- a/catalog.html
+++ b/catalog.html
@@ -136,45 +136,61 @@
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="#" alt="">
+            </a>
+            <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
             </a>
-            <span class="hotel-price">Гостиница От 4000 &#8381;</span>
+            <p class="hotel-type">Гостиница</p>
+            <p class="hotel-price">От 4000 &#8381;</p>
             <a class="hotel-information button" href="#">Подробнее</a>
             <button class="button add-to-favorites" type="button">В избранное</button>
-            <span class="rating">Рейтинг: 8,5</span>
+            <p class="raiting-stars visually-hidden">4 из 5</p>
+            <p class="rating">Рейтинг: 8,5</p>
           </li>
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="#" alt="">
+            </a>
+            <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
             </a>
-            <span class="hotel-price">Гостиница От 5000 &#8381;</span>
+            <p class="hotel-type">Гостиница</p>
+            <p class="hotel-price">От 5000 &#8381;</p>
             <a class="hotel-information button" href="#">Подробнее</a>
-            <button class="button favorites" type="button">В избранном</button>
-            <span class="rating">Рейтинг: 9,2</span>
+            <button class="button add-to-favorites" type="button">В избранное</button>
+            <p class="raiting-stars visually-hidden">4 из 5</p>
+            <p class="rating">Рейтинг: 9,2</p>
           </li>
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="#" alt="">
+            </a>
+            <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
             </a>
-            <span class="hotel-price">Гостиница От 2500 &#8381;</span>
+            <p class="hotel-type">Гостиница</p>
+            <p class="hotel-price">От 2500 &#8381;</p>
             <a class="hotel-information button" href="#">Подробнее</a>
             <button class="button add-to-favorites" type="button">В избранное</button>
-            <span class="rating">Рейтинг: 6,9</span>
+            <p class="raiting-stars visually-hidden">3 из 5</p>
+            <p class="rating">Рейтинг: 6,9</p>
           </li>
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
               <img class="hotel-card-image" src="#" alt="">
+            </a>
+            <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
             </a>
-            <span class="hotel-price">Гостиница От 1500 &#8381;</span>
+            <p class="hotel-type">Гостиница</p>
+            <p class="hotel-price">От 1500 &#8381;</p>
             <a class="hotel-information button" href="#">Подробнее</a>
             <button class="button add-to-favorites" type="button">В избранное</button>
-            <span class="rating">Рейтинг: 5,0</span>
+            <p class="raiting-stars visually-hidden">2 из 5</p>
+            <p class="rating">Рейтинг: 5,0</p>
           </li>
         </ul>
 
