--- a/catalog.html
+++ b/catalog.html
@@ -118,17 +118,17 @@
         <ul class="view-type-list">
           <li class="view-type-item">
             <a class="sorting-button" href="#">
-              <span class="visually-hidden">Показать карточки</span>
+              <p class="visually-hidden">Показать карточки</p>
             </a>
           </li>
           <li class="view-type-item">
             <a class="sorting-button" href="#">
-              <span class="visually-hidden">Показать слайды</span>
+              <p class="visually-hidden">Показать слайды</p>
             </a>
           </li>
           <li class="view-type-item">
             <a class="sorting-button" href="#">
-              <span class="visually-hidden">Показать список</span>
+              <p class="visually-hidden">Показать список</p>
             </a>
           </li>
         </ul>
