--- a/catalog.html
+++ b/catalog.html
@@ -215,39 +215,48 @@
           </li>
         </ul>
       </section>
-      </main>
-
-    <footer class="main-footer">
-      <h2 class="visually-hidden">Контакты</h2>
       <section class="mailing">
-        <h3>Подпишитесь на рассылку</h3>
+        <h2 class="visually-hidden">Подписка</h2>
+        <p>Подпишитесь на рассылку</p>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
           <button class="button" type="submit">Подписаться</button>
         </form>
       </section>
-      <section class="social">
-        <h3 class="visually-hidden">Социальные сети</h3>
-        <ul class="social-list">
-          <li class="social-list-item">
-            <a class="social-button" href="#"><span class="visually-hidden">VK</span></a>
-          </li>
-          <li class="social-list-item">
-            <a class="social-button" href="#"><span class="visually-hidden">Telegram</span></a>
-          </li>
-          <li class="social-list-item">
-            <a class="social-button" href="#"><span class="visually-hidden">Youtube</span></a>
-          </li>
-        </ul>
-      </section>
-      <section class="phone">
-        <h3 class="visually-hidden">Контактный телефон</h3>
-        <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </section>
-      <section class="html-academy">
-        <h3 class="visually-hidden">HTML Академия</h3>
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.htmlacademy</a>
+      </main>
+
+    <footer class="main-footer">
+      <section class="contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <div>
+          <h3 class="visually-hidden">Социальные сети</h3>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a class="social-button" href="https://vk.com/htmlacademy">
+                <p class="visually-hidden">VK</p>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a class="social-button" href="https://t.me/htmlacademy">
+                <p class="visually-hidden">Telegram</p>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
+                <p class="visually-hidden">Youtube</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="phone">
+          <h3 class="visually-hidden">Контактный телефон</h3>
+          <a class="contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </div>
+        <div class="academy">
+          <h3 class="visually-hidden">HTML Академия</h3>
+          <a class="htmlacademy-link" href="https://htmlacademy.ru/">.htmlacademy</a>
+        </div>
       </section>
     </footer>
   </body>
