меняет span на p

--- a/catalog.html
+++ b/catalog.html
@@ -26,12 +26,12 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
+              <p class="visually-hidden">Поиск</p>
             </a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
+              <p class="visually-hidden">Избранное</p>
             </a>
           </li>
           <li class="navigation-list-item">
@@ -109,7 +109,7 @@
       </section>
       <section>
         <h2 class="visually-hidden">Результаты поиска</h2>
-        <span class="searching-results-quantity">Найдено гостиниц: 38</span>
+        <p class="searching-results-quantity">Найдено гостиниц: 38</p>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешевые</option>
           <option value="expensive">Сначала дорогие</option>
