--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
+              <p class="visually-hidden">Поиск</p>
             </a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
+              <p class="visually-hidden">Избранное</p>
             </a>
           </li>
           <li class="navigation-list-item">
