--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="main-logo" src="#" alt="Логотип Седона">
+      <a href="index.html">
+        <img class="main-logo" src="#" alt="Логотип Седона">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-list-item">
-            <a class="navigation-link navigation-link-current" href="/">Главная</a>
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">О Седоне</a>
