--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="main-header">
       <a href="index.html">
-        <img class="main-logo" src="#" alt="Логотип Седона">
+        <img class="main-logo" src="images/logo.svg" alt="Логотип Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
