--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
   </head>
   <body>
     <header class="main-header">
       <a href="index.html">
-        <img class="main-logo" src="#" alt="Логотип Седона">
+        <img class="main-logo" src="images/logo.svg" alt="Логотип Седона">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -46,10 +46,10 @@
       <section class="welcome">
         <h2 class="visually-hidden">Добро пожаловать</h2>
         <img src="#" alt="Добро пожаловать в Седону">
+        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-list-item">
