--- a/catalog.html
+++ b/catalog.html
@@ -121,26 +121,26 @@
           <li class="view-type-item">
             <a class="sorting-button" href="#">
               <p class="visually-hidden">Показать карточки</p>
-              <img src="images/view/view-1.svg" alt="">
+              <img src="images/view/view-1.svg" width="16" height="14" alt="">
             </a>
           </li>
           <li class="view-type-item">
             <a class="sorting-button" href="#">
               <p class="visually-hidden">Показать слайды</p>
-              <img src="images/view/view-2.svg" alt="">
+              <img src="images/view/view-2.svg" width="16" height="14" alt="">
             </a>
           </li>
           <li class="view-type-item">
             <a class="sorting-button" href="#">
               <p class="visually-hidden">Показать список</p>
-              <img src="images/view/view-3.svg" alt="">
+              <img src="images/view/view-3.svg" width="16" height="14" alt="">
             </a>
           </li>
         </ul>
         <ul class="hotel-list">
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" alt="">
+              <img class="hotel-card-image" src="images/hotel/hotel-1.jpg" width="300" height="212" alt="">
             </a>
             <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
@@ -155,7 +155,7 @@
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" alt="">
+              <img class="hotel-card-image" src="images/hotel/hotel-2.jpg" width="300" height="212" alt="">
             </a>
             <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
@@ -170,7 +170,7 @@
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" alt="">
+              <img class="hotel-card-image" src="images/hotel/hotel-3.jpg" width="300" height="212" alt="">
             </a>
             <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
@@ -185,7 +185,7 @@
 
           <li class="hotel-card">
             <a class="hotel-card-link" href="#">
-              <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" alt="">
+              <img class="hotel-card-image" src="images/hotel/hotel-4.jpg" width="300" height="212" alt="">
             </a>
             <a class="hotel-card-link" href="#">
               <h3 class="hotel-card-title">GreenTree Inn</h3>
