Заменяет картинки на сжатые

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Седона каталог</title>
     <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="main-header">
@@ -49,6 +50,9 @@
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">Главная</a>
+          </li>
+          <li class="breadcrumbs-item">
+            <img src="images/breadcrumbs-arrow.svg" width="6.39" height="9.94" alt="">
           </li>
           <li class="breadcrumbs-item">
             Гостиницы
