--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li class="advantages-list-item">
             <h3>Там есть мост Дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="images/grand-canyon.jpg" width="800" height="385" alt="Гранд-Каньон.">
+            <img src="images/grand-canyon.jpg" width="800" height="385" alt="Мост Дьявола.">
           </li>
         </ul>
       </section>
