--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">
               <p class="visually-hidden">Поиск</p>
-              <img src="images/header/icon-search.svg" width="18" height="18" alt="">
+              <img src="images/header/icon-search.svg" width="18" height="18" alt=""> <!-- Сделать псевдоэлементом  -->
             </a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-link" href="#">
               <p class="visually-hidden">Избранное</p>
-              <img src="images/header/icon-heart.svg" width="18" height="17" alt="">
+              <img src="images/header/icon-heart.svg" width="18" height="17" alt=""> <!-- Сделать псевдоэлементом  -->
+              <span>12</span>
             </a>
           </li>
           <li class="navigation-list-item">
