--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
         <p>Опытный персонал и качественное обслуживание!</p>
         <ul class="recomendations-list">
           <li class="recomendations-list-item">
-            <img src="images/house.svg" width="75" height="72" alt="">
+            <img src="images/house.svg" width="75" height="72" alt="дом">
             <h3>Жильё</h3>
             <p>Рекомендуем пожитьв настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="recomendations-list-item">
-            <img src="images/food.svg" width="74" height="70" alt="">
+            <img src="images/food.svg" width="74" height="70" alt="бургер">
             <h3>Еда</h3>
             <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="recomendations-list-item">
-            <img src="images/gift.svg" width="64" height="76" alt="">
+            <img src="images/gift.svg" width="64" height="76" alt="подарок">
             <h3>Сувениры</h3>
             <p>Не только китайского, но и настоящего местного производства!</p>
           </li>
