--- a/catalog.html
+++ b/catalog.html
@@ -223,8 +223,8 @@
       </section>
       <section class="mailing">
         <h2 class="visually-hidden">Подписка</h2>
-        <p>Подпишитесь на рассылку</p>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <p class="mailing-first-p">Подпишитесь на рассылку</p>
+        <p class="mailing-second-p">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
           <button class="button" type="submit">Подписаться</button>
