--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/style.css">
   </head>
     <body>
-      <div class="container">
+      <div class="page-container">
         <header class="main-header">
           <a href="index.html">
             <img class="main-logo" src="images/header/logo.svg" width="140" height="70" alt="Логотип Седона.">
@@ -109,8 +109,8 @@
           <section class="search-hotel">
             <h2 class="visually-hidden">Поиск отеля</h2>
             <p class="search-hotel-first-p">Заинтересовались?</p>
-            <p class="search-hotel-second-p">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <button class="button">Поиск гостиницы в Седоне</button>
+            <p class="search-hotel-second-p">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <button class="button search-button">Поиск гостиницы в Седоне</button>
           </section>
           <section class="mailing mailing-index">
             <h2 class="visually-hidden">Подписка</h2>
@@ -118,7 +118,7 @@
             <p class="mailing-second-p">Только полезная информация и никакого спама, честное бойскаутское!</p>
             <form class="mailing-list" action="https://echo.htmlacademy.ru/" method="post">
               <input type="email" name="email" id="email" placeholder="Ваш e-mail" required>
-              <button class="button" type="submit">Подписаться</button>
+              <button class="button mailing-button" type="submit">Подписаться</button>
             </form>
           </section>
         </main>
