--- a/catalog.html
+++ b/catalog.html
@@ -168,7 +168,7 @@
               <p class="hotel-type">Гостиница</p>
               <p class="hotel-price">От 5000 &#8381;</p>
               <a class="hotel-information button" href="#">Подробнее</a>
-              <button class="button add-to-favorites" type="button">В избранное</button>
+              <button class="button added-to-favorites" type="button">В избранном</button>
               <p class="raiting-stars visually-hidden">4 из 5</p>
               <p class="rating">Рейтинг: 9,2</p>
             </li>
@@ -206,7 +206,7 @@
 
           <ul class="pagination-list">
             <li class="pagination-item">
-              <a class="pagination-link pagination-current">1</a>
+              <a class="pagination-link">1</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">2</a>
